--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,10 @@
 }
 
 datalist.form-datalist {
+	display: none;
+}
+
+datalist.form-datalist {
 	-moz-padding-start: calc(0.75rem - 3px);
 	-webkit-appearance: none;
 	-moz-appearance: none;
@@ -30,6 +34,7 @@ datalist.form-datalist {
 	padding: 0.375rem 1.75rem 0.375rem 0.75rem;
 	transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 	width: 100%;
+	display: none;
 }
 
 /* --------------- Print --------------- */
