--- a/assets/css/print.css
+++ b/assets/css/print.css
@@ -1,39 +1,45 @@
+@font-face {
+    font-family: "Arial Black";
+    src: url("../fonts/ARIALMTEXTRABOLD.TTF");
+}
+
 table,
 tr,
 td {
-    height: 60px;
+    height: 40px;
 }
 
 h2.head-title {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    font-family: "Arial Black";
+    /* font-weight: bold; */
     font-size: 22px;
 }
 
 p.head-desc {
-    font-family: "Times New Roman", Times, serif;
-    /* font-weight: bold; */
-    font-size: 14px;
+    font-family: "Times New Roman";
+    font-weight: bold;
+    font-size: 12px;
+    /* line-height: 70px; */
 }
 
 table.devider {
     width: 100%;
-    border-top: 3px solid #000;
-    border-bottom: 1px solid #000;
+    border-bottom: 4px solid #000;
+    border-top: 1px solid #000;
 }
 
-tr.devider {
-    height: 2px;
+tr.devider-tr {
+    height: 0px;
 }
 
-td.devider {
-    height: 2px;
+td.devider-td {
+    height: -2px;
 }
 
 h2.head-table {
     font-family: "Times New Roman", Times, serif;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
 }
 
